data migration application (Package for Source Org)/objects/Migration_Objects__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>FilterField_1__c</fullName>
        <label>FilterField 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FilterField_2__c</fullName>
        <label>FilterField 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Level__c</fullName>
        <label>Hierarchy Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_type__c</fullName>
        <label>Object type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_type__c</fullName>
        <defaultValue>&quot;retrieve&quot;</defaultValue>
        <label>Operation type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>RecordType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>child_setting_name__c</fullName>
        <label>child setting name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>consider_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>consider Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>filterValue_1__c</fullName>
        <label>filterValue 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>filterValue_2__c</fullName>
        <label>filterValue 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>get_child__c</fullName>
        <defaultValue>false</defaultValue>
        <label>get child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hierarchy__c</fullName>
        <label>hierarchy</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>objectName__c</fullName>
        <label>objectName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>relationship_field__c</fullName>
        <label>relationship field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>self_lookup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>self lookup</label>
        <type>Checkbox</type>
    </fields>
    <label>Migration Objects</label>
</CustomObject>